[package]
name = "oxagent"
description = "oxrdp Windows guest agent: captures app windows (WGC), encodes (Media Foundation), and serves the oxproto stream. Windows-only."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
oxproto = { path = "../oxproto" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Media_MediaFoundation",
    "Graphics_Capture",
    "Graphics_DirectX_Direct3D11",
    "Win32_System_WinRT_Graphics_Capture",
] }

[lints]
workspace = true
