[package]
name = "oxrdp-cli"
description = "Thin CLI binary launching an oxrdp session (full desktop or RAIL/RemoteApp window)."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "oxrdp"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
oxrdp-io = { path = "../oxrdp-io" }
oxrdp-core = { path = "../oxrdp-core" }
oxrdp-pdu = { path = "../oxrdp-pdu" }

[lints]
workspace = true
