[package]
name = "oxrdp-io"
description = "tokio transport: TCP/TLS framing driving the sans-io core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "macros"] }
oxrdp-pdu = { path = "../oxrdp-pdu" }

[lints]
workspace = true
