[package]
name = "oxrdp-io"
description = "tokio transport: TCP/TLS framing driving the sans-io core."
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1", features = ["io-util", "net", "rt", "macros"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
oxrdp-pdu = { path = "../oxrdp-pdu" }
oxrdp-core = { path = "../oxrdp-core" }
oxrdp-crypto = { path = "../oxrdp-crypto" }

[lints]
workspace = true
